@@ -1,13 +1,0 @@
-// libpqxx.cxx : Defines the entry point for the DLL application.
-
-/*
-// Exclude rarely-used stuff from Windows headers.
-#define WIN32_LEAN_AND_MEAN
-
-#include <windows.h>
-
-BOOL APIENTRY DllMain(HANDLE, DWORD, LPVOID)
-{
-    return TRUE;
-}
-*/
