@@ -96,12 +96,12 @@ OBJ_STATICRELEASE=\
     ###MAKTEMPLATE:ENDFOREACH
 
 OBJ_DLLDEBUG=\
-    ###MAKTEMPLATE:FOREACH src/*.cxx,win32/libpqxx.cxx
+    ###MAKTEMPLATE:FOREACH src/*.cxx
        "$(INTDIR_DLLDEBUG)\###BASENAME###.obj" \
     ###MAKTEMPLATE:ENDFOREACH
 
 OBJ_DLLRELEASE=\
-    ###MAKTEMPLATE:FOREACH src/*.cxx,win32/libpqxx.cxx
+    ###MAKTEMPLATE:FOREACH src/*.cxx,win32
        "$(INTDIR_DLLRELEASE)\###BASENAME###.obj" \
     ###MAKTEMPLATE:ENDFOREACH
 
@@ -215,7 +215,7 @@ $(INTDIR_DLLRELEASE)::
 ###MAKTEMPLATE:ENDFOREACH
 
 
-###MAKTEMPLATE:FOREACH src/*.cxx,win32/libpqxx.cxx
+###MAKTEMPLATE:FOREACH src/*.cxx
 
 "$(INTDIR_DLLRELEASE)\###BASENAME###.obj": ###FILENAME### $(INTDIR_DLLRELEASE)
 	$(CXX) $(CXX_FLAGS_DLLRELEASE) /Fo"$(INTDIR_DLLRELEASE)\\" /Fd"$(INTDIR_DLLRELEASE)\\" ###FILENAME###
@@ -224,4 +224,3 @@ $(INTDIR_DLLRELEASE)::
 	$(CXX) $(CXX_FLAGS_DLLDEBUG) /Fo"$(INTDIR_DLLDEBUG)\\" /Fd"$(INTDIR_DLLDEBUG)\\" ###FILENAME###
 
 ###MAKTEMPLATE:ENDFOREACH
-
